added all methods. remaining - change of update method in backend

--- a/index.html
+++ b/index.html
@@ -1,117 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To do</title>
     <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
     <link rel="stylesheet" href="main.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h2 class="text-center mt-5">Todo List</h2>
-          <form
-            id="todo-form"
-            class="row g-2 justify-content-center mt-3 needs-validation"
-          >
-            <div class="col-4">
-              <div class="input-group has-validation">
-                <input
-                  type="text"
-                  name="task"
-                  class="form-control"
-                  id="todo-input"
-                  placeholder="Enter a task"
-                />
-                <div class="invalid-feedback">Please enter a task</div>
-              </div>
+        <div class="row">
+            <div class="col-12">
+                <h2 class="text-center mt-5">Todo List</h2>
+                <form id="todo-form" class="row g-2 justify-content-center mt-3 needs-validation">
+                    <div class="col-4">
+                        <div class="input-group has-validation">
+                            <input type="text" name="task" class="form-control" id="todo-input" placeholder="Enter task title" />
+                            <div class="invalid-feedback">Please enter task title</div>
+                        </div>
+                        <br>
+                        <div class="input-group has-validation">
+                            <input type="text" name="task" class="form-control" id="todo-input-desc" placeholder="Enter task description" />
+                            <div class="invalid-feedback">Please enter task description</div>
+                        </div>
+                        <br>
+                        <div class="input-group has-validation">
+                            <input type="text" name="task" class="form-control" id="todo-input-diff" placeholder="Enter task difficulty" />
+                            <div class="invalid-feedback">Please enter task difficulty</div>
+                        </div>
+                    </div>
+                    <div class="col-auto">
+                        <button id="mygtukas" type="submit" class="btn btn-primary mb-3 px-4">
+              Add
+            </button>
+                    </div>
+                </form>
             </div>
-            <div class="col-auto">
-              <button
-                id="mygtukas"
-                type="submit"
-                class="btn btn-primary mb-3 px-4"
-              >
-                Add
-              </button>
+            <div class="col-12 mt-4">
+                <div class="row justify-content-center">
+                    <div id="todos" class="col-4">
+                        <h3 class="text-center border-bottom border-2 pb-2 mb-3">Todo</h3>
+                    </div>
+                    <div id="dones" class="col-4">
+                        <h3 class="text-center border-bottom border-2 pb-2 mb-3">Done</h3>
+                    </div>
+                </div>
             </div>
-          </form>
         </div>
-        <div class="col-12 mt-4">
-          <div class="row justify-content-center">
-            <div id="todos" class="col-4">
-              <h3 class="text-center border-bottom border-2 pb-2 mb-3">Todo</h3>
+        <!-- Modal -->
+        <div class="modal fade" id="edit-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Edit task</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body" id="edit-form">
+                        <input type="text" name="task" class="form-control" id="edit-input" placeholder="New title" />
+                        <br>
+                        <input type="text" name="task" class="form-control" id="edit-input-desc" placeholder="New description" />
+                        <br>
+                        <input type="text" name="task" class="form-control" id="edit-input-diff" placeholder="New difficulty" />
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+              Close
+            </button>
+                        <button type="button" class="btn btn-primary edit-submit" data-bs-dismiss="modal">
+              Edit
+            </button>
+                    </div>
+                </div>
             </div>
-            <div id="dones" class="col-4">
-              <h3 class="text-center border-bottom border-2 pb-2 mb-3">Done</h3>
-            </div>
-          </div>
         </div>
-      </div>
-      <!-- Modal -->
-      <div
-        class="modal fade"
-        id="edit-modal"
-        tabindex="-1"
-        aria-labelledby="exampleModalLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Edit task</h5>
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
-            </div>
-            <div class="modal-body">
-              <input
-                type="text"
-                name="task"
-                class="form-control"
-                id="edit-input"
-              />
-            </div>
-            <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-bs-dismiss="modal"
-              >
-                Close
-              </button>
-              <button
-                type="button"
-                class="btn btn-primary edit-submit"
-                data-bs-dismiss="modal"
-              >
-                Edit
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script src="todosClient.js"></script>
     <script src="main.js"></script>
-  </body>
+</body>
+
 </html>
